--- a/package.json
+++ b/package.json
@@ -2,19 +2,45 @@
   "name": "covergen",
   "version": "1.0.0",
   "private": true,
+  "description": "CoverGEN - AI-powered cover letter and resume generator helping users craft professional job applications with ease.",
+  "author": "Your Name or Company",
+  "license": "MIT",
+  "keywords": [
+    "cover letter",
+    "resume",
+    "generator",
+    "AI",
+    "job application",
+    "career",
+    "react"
+  ],
+  "homepage": "https://covergen.vercel.app",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/covergen.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yourusername/covergen/issues"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.{js,jsx}",
+    "format": "prettier --write \"src/**/*.{js,jsx,json,css,md}\""
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "eslint": "^8.35.0",
+    "prettier": "^2.8.4"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "CoverGEN AI cover letter and resume generator"
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  }
 }
