--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "job application",
     "career",
     "react",
-    "webapp"
+    "webapp",
+    "ATS",
+    "templates"
   ],
   "homepage": "https://covergen.vercel.app",
   "repository": {
@@ -27,10 +29,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "eslint \"src/**/*.{js,jsx}\"",
-    "format": "prettier --write \"src/**/*.{js,jsx,json,css,md}\"",
-    "prepare": "husky install"
+    "lint": "eslint 'src/**/*.{js,jsx}' --fix",
+    "format": "prettier --write 'src/**/*.{js,jsx,json,css,md}'",
+    "prepare": "husky install",
+    "precommit": "lint-staged",
+    "clean": "rimraf build node_modules/.cache",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -43,7 +47,9 @@
     "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.0",
     "lint-staged": "^13.1.0",
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.4",
+    "rimraf": "^5.0.0",
+    "source-map-explorer": "^2.5.3"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css,md}": [
